--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "test001",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "tana <tadaima12okaeri@gmail.com>",
