--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1",
